--- a/pages/login/app.css
+++ b/pages/login/app.css
@@ -6,8 +6,15 @@
     height: 105vh; 
     padding: 20px; 
     box-sizing: border-box;
-    background: url('/resource/8037194.png');
+    
+}
+
+body {
+    background: url('../../resource/8037194.png');
     background-size: cover;
+    display: flex;
+    align-items: center;   
+    justify-content: center; 
 }
 
 .app-header {
