--- a/pages/events/events.css
+++ b/pages/events/events.css
@@ -7,13 +7,16 @@
 
 body {
   width: 100%;
+  height: 100%;
 }
+
 .container {
   height: 100vh;
   width: 100vh;
-  background-color: #f5f5f5;
+  background-color: #e0d0c9;
   font-family: Arial, sans-serif;
 }
+
 
 /* Top Bar */
 .top-bar {
