Pagina de admin cu grup evenimente si participanti

--- a/index.css
+++ b/index.css
@@ -14,6 +14,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('./resource/8037194.jpg');
-  background-size: cover;
+  /* background: url('./resource/8037194.jpg');
+  background-size: cover; */
 }
