--- a/pages/events/eventDetails.css
+++ b/pages/events/eventDetails.css
@@ -13,6 +13,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: "Arial", sans-serif;
+  margin-top: 100px; 
 }
 
 .event-header {
