--- a/pages/events/eventGroup.css
+++ b/pages/events/eventGroup.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .event-group {
     background-color: #d7cbba;
     border: 1px solid #ddd;
@@ -8,6 +10,7 @@
     width: 100%;
     max-width: 800px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    font-family: 'Poppins', sans-serif; 
   }
 
   .event-group h2 {
