--- a/components/navbarAdmin.css
+++ b/components/navbarAdmin.css
@@ -56,7 +56,7 @@
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     padding: 10px;
-    width: 200px;
+    width: 300;
   }
   
   .dropdown-menu ul {
