--- a/pages/events/eventCard.css
+++ b/pages/events/eventCard.css
@@ -1,5 +1,6 @@
 .event-card {
   background-color: #fbf8f5;
+  background-size: cover;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
