--- a/pages/components/UserEventsModal.css
+++ b/pages/components/UserEventsModal.css
@@ -81,4 +81,41 @@
     transform: rotate(90deg);
   }
   
+  .modal-content form {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .modal-content form input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc; 
+    border-radius: 5px;
+    flex: 1;
+    margin-right: 10px;
+    transition: border-color 0.3s, box-shadow 0.3s;
+  }
+  
+  .modal-content form input[type="text"]:focus {
+    border-color: #5E0001;
+    box-shadow: 0 0 5px rgba(255, 1, 1, 0.5);
+    outline: none;
+  }
+  
+  .modal-content form input[type="submit"] {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #5E0001;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+  }
+  
+  .modal-content form input[type="submit"]:hover {
+    background-color: #7c0002;
+    transform: scale(1.05);
+  }
   
