--- a/pages/events/eventGroup.css
+++ b/pages/events/eventGroup.css
@@ -1,26 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .event-group {
-    background-color: #d7cbba;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px 0;
-    padding: 20px;
-    width: 100%;
-    max-width: 800px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    font-family: 'Poppins', sans-serif; 
-  }
+  background-color: #d7cbba;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  padding: 20px;
+  width: 100%;
+  max-width: 800px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+}
 
-  .event-group h2 {
-    font-size: 24px;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: bold;
-    color: #5E0001;
-  }
+.event-group h2 {
+  font-size: 24px;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: #5E0001;
+}
+
+.event-group .delete-group-btn {
+  position: absolute;
+  top: 20px; 
+  right: 20px; 
+  background-color: #5E0001;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.event-group .delete-group-btn:hover {
+  background-color: #930002;
+  transform: scale(1.1); 
+}
+
   
   .event-group a {
     text-decoration: none;
@@ -36,4 +57,24 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .delete-event-btn {
+    background-color: #930002;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    display: block;
+    width: fit-content;
+}
+
+.delete-event-btn:hover {
+    background-color: #c50003;
+    transform: scale(1.1);
+}
+
   
